# AI-Powered-CI-CD-Automation-Agent-for-GitHub

./: .gitignore  README.md  ci_analyser.py  dice_roll_simulator.py  git_changes.py  github_actions.py  github_events.json  main.py  pyproject.toml  requirements.txt  rough.text  run.txt  slack_webhook.py  test.py  user_management.py  utils.py  webhook_server.py
.github/workflows/: ci-analysis.yml  pr-agent.yml  python-package.yml
docs/: flow.html
templates/: bug.md  feature.md  performance.md  refactor.md  security.md  test.md
